--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,8 @@
 <% provide(:title, 'All users') %>
 <h1>All users</h1>
 
+<%= paginate @users %>
+
 <ul class="users">
   <% @users.each do |user| %>
     <li>
@@ -10,3 +12,5 @@
     </li>
   <% end %>
 </ul>
+
+<%= paginate @users %>
