--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
 
 <ul class="users">
   <% @users.each do |user| %>
-    <li>
+    <li class='users_list'>
       <%= gravatar_for user, size: 50 %>
       <%= link_to user.name, user %>
     </li>
