--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,12 +5,7 @@
 <%= paginate @users %>
 
 <ul class="users">
-  <% @users.each do |user| %>
-    <li class='users_list'>
-      <%= gravatar_for user, size: 50 %>
-      <%= link_to user.name, user %>
-    </li>
-  <% end %>
+  <%= render @users %>
 </ul>
 
 <%= paginate @users %>
